# simple-media-framework

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/SMF/: SMF.h
src/: CMakeLists.txt
src/SMF/: CMakeLists.txt  SMF_context.c  SMF_context.h  SMF_event.c  SMF_font.c  SMF_font.h  SMF_handle_set.c  SMF_handle_set.h  SMF_hash_map.c  SMF_hash_map.h  SMF_image.c  SMF_image.h  SMF_mem.c  SMF_mem.h  SMF_window.c  SMF_window.h
src/test_app/: CMakeLists.txt  main.c
